--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}">Top</a>
             <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/pubs">Publications</a>
+            <a href="{{ site.baseurl }}/publications">Publications</a>
             <a href="{{ site.baseurl }}/about">Profile</a>
           </nav>
         </header>
