--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Top</a>
+            <a href="https://github.com/aisomur/aisomur.github.io">Top</a>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
             <a href="{{ site.baseurl }}/about">About</a>
