--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,11 @@
           </div>
 
           <nav>
-            <a href="https://github.com/aisomur/aisomur.github.io">Top</a>
+            <a href="{{ site.baseurl }}/">Top</a>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/ja/">日本語</a>
           </nav>
         </header>
       </div>
